--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     font-family: Gotham Rounded;
 }
 
+.timerp {
+    padding-top: 50px;
+    font-size: 45px;
+    font-family: Gotham Rounded;
+}
+
 body {
 padding: 0;
 margin: 0;
